# sypher-stt

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml  run.bat
scripts/: download_model.py
src/sypher_stt/: __init__.py  __main__.py  app.py  audio.py  clipboard.py  config.py  constants.py  hotkeys.py  instance.py  logger.py  settings.py  sounds.py  transcriber.py  tray.py
